code/dotnet/PAEngine/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# PA Engine client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.PAEngine)](https://www.nuget.org/packages/FactSet.SDK.PAEngine)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch PA Engine Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.11
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.Protobuf.Stach.Extensions
dotnet add package FactSet.SDK.PAEngine -v 0.8.11
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.Protobuf.Stach.Extensions
nuget install FactSet.SDK.PAEngine -Version 0.8.11
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.PAEngine.Api;
using FactSet.SDK.PAEngine.Client;
using FactSet.SDK.PAEngine.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.PAEngine.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "\"Client:Foo/Bar\"";  // string | The directory to get the accounts and sub-directories in (default to "Client:Foo/Bar")

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectories result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*CalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*CalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*CalculationsApi* | [**GetCalculationStatusSummaries**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationsApi.md#getcalculationstatussummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*CalculationsApi* | [**RunCalculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationsApi.md#runcalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*ColumnStatisticsApi* | [**GetPAColumnStatistics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ColumnStatisticsApi.md#getpacolumnstatistics) | **GET** /analytics/lookups/v2/engines/pa/columnstatistics | Get PA column statistics
*ColumnsApi* | [**GetPAColumnById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ColumnsApi.md#getpacolumnbyid) | **GET** /analytics/lookups/v2/engines/pa/columns/{id} | Get PA column settings
*ColumnsApi* | [**GetPAColumns**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ColumnsApi.md#getpacolumns) | **GET** /analytics/lookups/v2/engines/pa/columns | Get PA columns
*ComponentsApi* | [**GetPAComponentById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ComponentsApi.md#getpacomponentbyid) | **GET** /analytics/lookups/v2/engines/pa/components/{id} | Get PA component by id
*ComponentsApi* | [**GetPAComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ComponentsApi.md#getpacomponents) | **GET** /analytics/lookups/v2/engines/pa/components | Get PA components
*CurrenciesApi* | [**GetPACurrencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CurrenciesApi.md#getpacurrencies) | **GET** /analytics/lookups/v2/engines/pa/currencies | Get PA currencies
*DatesApi* | [**ConvertPADatesToAbsoluteFormat**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/DatesApi.md#convertpadatestoabsoluteformat) | **GET** /analytics/lookups/v2/engines/pa/dates | Convert PA dates to absolute format
*DocumentsApi* | [**GetPA3Documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/DocumentsApi.md#getpa3documents) | **GET** /analytics/lookups/v2/engines/pa/documents/{path} | Get PA3 documents and sub-directories in a directory
*FrequenciesApi* | [**GetPAFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/FrequenciesApi.md#getpafrequencies) | **GET** /analytics/lookups/v2/engines/pa/frequencies | Get PA frequencies
*GroupsApi* | [**GetPAGroups**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/GroupsApi.md#getpagroups) | **GET** /analytics/lookups/v2/engines/pa/groups | Get PA groups


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/AccountDirectories.md)
 - [Model.Calculation](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/Calculation.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationStatus.md)
 - [Model.CalculationStatusSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationStatusSummary.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/CalculationUnitStatus.md)
 - [Model.Column](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/Column.md)
 - [Model.ColumnStatistic](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ColumnStatistic.md)
 - [Model.ColumnSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ColumnSummary.md)
 - [Model.ComponentAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ComponentAccount.md)
 - [Model.ComponentBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ComponentBenchmark.md)
 - [Model.ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/ComponentSummary.md)
 - [Model.Currency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/Currency.md)
 - [Model.DateParametersSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/DateParametersSummary.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/DocumentDirectories.md)
 - [Model.Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/Frequency.md)
 - [Model.Group](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/Group.md)
 - [Model.PACalculationColumn](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PACalculationColumn.md)
 - [Model.PACalculationGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PACalculationGroup.md)
 - [Model.PACalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PACalculationParameters.md)
 - [Model.PAComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PAComponent.md)
 - [Model.PADateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PADateParameters.md)
 - [Model.PAIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PAIdentifier.md)
 - [Model.PubCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PubCalculationParameters.md)
 - [Model.PubDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PubDateParameters.md)
 - [Model.PubIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/PubIdentifier.md)
 - [Model.SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/SPARCalculationParameters.md)
 - [Model.SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/SPARDateParameters.md)
 - [Model.SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/SPARIdentifier.md)
 - [Model.VaultCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/VaultCalculationParameters.md)
 - [Model.VaultDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/VaultDateParameters.md)
 - [Model.VaultIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v2/docs/VaultIdentifier.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
