code/dotnet/PAEngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# PA Engine client library for .NET

[![API Version](https://img.shields.io/badge/api-v3.23.0-blue)](https://developer.factset.com/api-catalog/pa-engine-api)
[![Nuget](https://img.shields.io/badge/nuget-v3.0.0-orange)](https://www.nuget.org/packages/FactSet.SDK.PAEngine/3.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.23.0
- SDK version: 3.0.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.Protobuf.Stach.Extensions
dotnet add package FactSet.SDK.PAEngine -v 3.0.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.Protobuf.Stach.Extensions
nuget install FactSet.SDK.PAEngine -Version 3.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.PAEngine.Api;
using FactSet.SDK.PAEngine.Client;
using FactSet.SDK.PAEngine.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.PAEngine.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "Client:";  // string | The directory to get the accounts and sub-directories.

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectoriesRoot result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*CalendarApi* | [**GetPACalendars**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalendarApi.md#getpacalendars) | **GET** /analytics/engines/pa/v3/calendars | Get PA calendars
*ColumnStatisticsApi* | [**GetPAColumnStatistics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnStatisticsApi.md#getpacolumnstatistics) | **GET** /analytics/engines/pa/v3/columnstatistics | Get PA column statistics
*ColumnsApi* | [**GetPAColumnById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnsApi.md#getpacolumnbyid) | **GET** /analytics/engines/pa/v3/columns/{id} | Get PA column settings
*ColumnsApi* | [**GetPAColumns**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnsApi.md#getpacolumns) | **GET** /analytics/engines/pa/v3/columns | Get PA columns
*ComponentsApi* | [**GetPAComponentById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ComponentsApi.md#getpacomponentbyid) | **GET** /analytics/engines/pa/v3/components/{id} | Get PA component by id
*ComponentsApi* | [**GetPAComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ComponentsApi.md#getpacomponents) | **GET** /analytics/engines/pa/v3/components | Get PA components
*ConfigurationsApi* | [**GetPACommentaryConfigurations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ConfigurationsApi.md#getpacommentaryconfigurations) | **GET** /analytics/engines/pa/v3/commentary/configurations | Get PA commentary configurations in a directory
*CurrenciesApi* | [**GetCurrencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CurrenciesApi.md#getcurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*DatesApi* | [**ConvertPADatesToAbsoluteFormat**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/DatesApi.md#convertpadatestoabsoluteformat) | **GET** /analytics/engines/pa/v3/dates | Convert PA dates to absolute format
*DocumentsApi* | [**GetPA3Documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/DocumentsApi.md#getpa3documents) | **GET** /analytics/engines/pa/v3/documents/{path} | Get PA3 documents and sub-directories in a directory
*FrequenciesApi* | [**GetPAFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/FrequenciesApi.md#getpafrequencies) | **GET** /analytics/engines/pa/v3/frequencies | Get PA frequencies
*GroupsApi* | [**GetPAGroupingFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/GroupsApi.md#getpagroupingfrequencies) | **GET** /analytics/engines/pa/v3/grouping-frequencies | Get PA grouping frequencies
*GroupsApi* | [**GetPAGroups**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/GroupsApi.md#getpagroups) | **GET** /analytics/engines/pa/v3/groups | Get PA groups
*LinkedPATemplatesApi* | [**CreateLinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatesApi.md#createlinkedpatemplates) | **POST** /analytics/engines/pa/v3/linked-templates | Create a linked PA template
*LinkedPATemplatesApi* | [**DeleteLinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatesApi.md#deletelinkedpatemplates) | **DELETE** /analytics/engines/pa/v3/linked-templates/{id} | Delete a linked PA template.
*LinkedPATemplatesApi* | [**GetLinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatesApi.md#getlinkedpatemplates) | **GET** /analytics/engines/pa/v3/linked-templates | Get linked PA templates
*LinkedPATemplatesApi* | [**GetLinkedPATemplatesById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatesApi.md#getlinkedpatemplatesbyid) | **GET** /analytics/engines/pa/v3/linked-templates/{id} | Get linked PA template by id
*LinkedPATemplatesApi* | [**UpdateLinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatesApi.md#updatelinkedpatemplates) | **PUT** /analytics/engines/pa/v3/linked-templates/{id} | Update a linked PA template
*PACalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/pa/v3/calculations/{id} | Cancel PA calculation by id
*PACalculationsApi* | [**GeneratePAPortfolioCommentary**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#generatepaportfoliocommentary) | **POST** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary | Generate PA portfolio commentary by calculation and unit id.
*PACalculationsApi* | [**GetAllCalculations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#getallcalculations) | **GET** /analytics/engines/pa/v3/calculations | Get all calculations
*PACalculationsApi* | [**GetCalculationParameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#getcalculationparameters) | **GET** /analytics/engines/pa/v3/calculations/{id} | Get PA calculation parameters by id
*PACalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/pa/v3/calculations/{id}/status | Get PA calculation status by id
*PACalculationsApi* | [**GetCalculationUnitResultById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#getcalculationunitresultbyid) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/result | Get PA calculation result by id
*PACalculationsApi* | [**GetPAPortfolioCommentaryResultById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#getpaportfoliocommentaryresultbyid) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary/result | Get PA Portfolio commentary result by calculation and unit id.
*PACalculationsApi* | [**GetPAPortfolioCommentaryStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#getpaportfoliocommentarystatusbyid) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary/status | Get PA portfolio commentary status by calculation and unit id.
*PACalculationsApi* | [**PostAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#postandcalculate) | **POST** /analytics/engines/pa/v3/calculations | Create and Run PA calculation
*PACalculationsApi* | [**PutAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationsApi.md#putandcalculate) | **PUT** /analytics/engines/pa/v3/calculations/{id} | Create or Update PA calculation and run it.
*PricingSourcesApi* | [**GetPAPricingSources**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PricingSourcesApi.md#getpapricingsources) | **GET** /analytics/engines/pa/v3/pricing-sources | Get PA pricing sources
*TemplatedPAComponentsApi* | [**CreateTemplatedPAComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentsApi.md#createtemplatedpacomponents) | **POST** /analytics/engines/pa/v3/templated-components | Create templated PA component
*TemplatedPAComponentsApi* | [**DeleteTemplatedPAComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentsApi.md#deletetemplatedpacomponents) | **DELETE** /analytics/engines/pa/v3/templated-components/{id} | Delete templated PA component
*TemplatedPAComponentsApi* | [**GetTemplatedPAComponentById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentsApi.md#gettemplatedpacomponentbyid) | **GET** /analytics/engines/pa/v3/templated-components/{id} | Get templated PA component by id
*TemplatedPAComponentsApi* | [**GetTemplatedPAComponentsInPath**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentsApi.md#gettemplatedpacomponentsinpath) | **GET** /analytics/engines/pa/v3/templated-components | Get templated PA components in path
*TemplatedPAComponentsApi* | [**UpdateTemplatedPAComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentsApi.md#updatetemplatedpacomponents) | **PUT** /analytics/engines/pa/v3/templated-components/{id} | Update templated PA component
*UnlinkedPATemplatesApi* | [**CreateUnlinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#createunlinkedpatemplates) | **POST** /analytics/engines/pa/v3/unlinked-templates | Create unlinked PA template
*UnlinkedPATemplatesApi* | [**DeleteUnlinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#deleteunlinkedpatemplates) | **DELETE** /analytics/engines/pa/v3/unlinked-templates/{id} | Delete unlinked PA template
*UnlinkedPATemplatesApi* | [**GetDefaultUnlinkedPATemplateTypes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#getdefaultunlinkedpatemplatetypes) | **GET** /analytics/engines/pa/v3/unlinked-templates/template-types | Get default unlinked PA template types.
*UnlinkedPATemplatesApi* | [**GetDetailsType**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#getdetailstype) | **GET** /analytics/engines/pa/v3/unlinked-templates/template-types/{id} | Get unlinked PA template type details by id.
*UnlinkedPATemplatesApi* | [**GetUnlinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#getunlinkedpatemplates) | **GET** /analytics/engines/pa/v3/unlinked-templates | Get unlinked PA templates
*UnlinkedPATemplatesApi* | [**GetUnlinkedPATemplatesById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#getunlinkedpatemplatesbyid) | **GET** /analytics/engines/pa/v3/unlinked-templates/{id} | Get unlinked PA template details by id
*UnlinkedPATemplatesApi* | [**UpdateUnlinkedPATemplates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatesApi.md#updateunlinkedpatemplates) | **PUT** /analytics/engines/pa/v3/unlinked-templates/{id} | Update unlinked PA template


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/AccountDirectories.md)
 - [Model.AccountDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/AccountDirectoriesRoot.md)
 - [Model.CalculationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationMeta.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationStatus.md)
 - [Model.CalculationStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationStatusMeta.md)
 - [Model.CalculationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationStatusRoot.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationUnitStatus.md)
 - [Model.CalculationUnitStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationUnitStatusMeta.md)
 - [Model.CalculationsSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationsSummary.md)
 - [Model.CalculationsSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CalculationsSummaryRoot.md)
 - [Model.ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ClientErrorResponse.md)
 - [Model.Column](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Column.md)
 - [Model.ColumnRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnRoot.md)
 - [Model.ColumnStatistic](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnStatistic.md)
 - [Model.ColumnStatisticRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnStatisticRoot.md)
 - [Model.ColumnSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnSummary.md)
 - [Model.ColumnSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ColumnSummaryRoot.md)
 - [Model.ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ComponentSummary.md)
 - [Model.ComponentSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ComponentSummaryRoot.md)
 - [Model.Currency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Currency.md)
 - [Model.CurrencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/CurrencyRoot.md)
 - [Model.DateParametersSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/DateParametersSummary.md)
 - [Model.DateParametersSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/DateParametersSummaryRoot.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/DocumentDirectories.md)
 - [Model.DocumentDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/DocumentDirectoriesRoot.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ErrorSource.md)
 - [Model.Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Frequency.md)
 - [Model.FrequencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/FrequencyRoot.md)
 - [Model.Group](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Group.md)
 - [Model.GroupRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/GroupRoot.md)
 - [Model.LinkedPATemplate](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplate.md)
 - [Model.LinkedPATemplateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateParameters.md)
 - [Model.LinkedPATemplateParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateParametersRoot.md)
 - [Model.LinkedPATemplatePostSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatePostSummary.md)
 - [Model.LinkedPATemplatePostSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplatePostSummaryRoot.md)
 - [Model.LinkedPATemplateRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateRoot.md)
 - [Model.LinkedPATemplateSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateSummary.md)
 - [Model.LinkedPATemplateSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateSummaryRoot.md)
 - [Model.LinkedPATemplateUpdateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateUpdateParameters.md)
 - [Model.LinkedPATemplateUpdateParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/LinkedPATemplateUpdateParametersRoot.md)
 - [Model.Metadata](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Metadata.md)
 - [Model.ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/ObjectRoot.md)
 - [Model.PACalculationColumn](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationColumn.md)
 - [Model.PACalculationDataSources](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationDataSources.md)
 - [Model.PACalculationGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationGroup.md)
 - [Model.PACalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationParameters.md)
 - [Model.PACalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationParametersRoot.md)
 - [Model.PACalculationPricingSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalculationPricingSource.md)
 - [Model.PACalendar](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalendar.md)
 - [Model.PACalendarRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACalendarRoot.md)
 - [Model.PACommentary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentary.md)
 - [Model.PACommentaryConfigurationSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryConfigurationSummary.md)
 - [Model.PACommentaryConfigurationSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryConfigurationSummaryRoot.md)
 - [Model.PACommentaryDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryDate.md)
 - [Model.PACommentaryGetStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryGetStatus.md)
 - [Model.PACommentaryGetStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryGetStatusRoot.md)
 - [Model.PACommentaryParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryParameters.md)
 - [Model.PACommentaryParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryParametersRoot.md)
 - [Model.PACommentaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryRoot.md)
 - [Model.PACommentaryStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryStatus.md)
 - [Model.PACommentaryStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PACommentaryStatusRoot.md)
 - [Model.PAComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PAComponent.md)
 - [Model.PAComponentData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PAComponentData.md)
 - [Model.PAComponentRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PAComponentRoot.md)
 - [Model.PADateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PADateParameters.md)
 - [Model.PAIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PAIdentifier.md)
 - [Model.PAPricingSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PAPricingSource.md)
 - [Model.PAPricingSourceRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PAPricingSourceRoot.md)
 - [Model.PaginationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PaginationInfo.md)
 - [Model.PaginationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/PaginationMeta.md)
 - [Model.Section](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/Section.md)
 - [Model.TemplateContentTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplateContentTypes.md)
 - [Model.TemplatedPAComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponent.md)
 - [Model.TemplatedPAComponentParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentParameters.md)
 - [Model.TemplatedPAComponentParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentParametersRoot.md)
 - [Model.TemplatedPAComponentPostSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentPostSummary.md)
 - [Model.TemplatedPAComponentPostSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentPostSummaryRoot.md)
 - [Model.TemplatedPAComponentRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentRoot.md)
 - [Model.TemplatedPAComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentSummary.md)
 - [Model.TemplatedPAComponentSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentSummaryRoot.md)
 - [Model.TemplatedPAComponentUpdateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentUpdateParameters.md)
 - [Model.TemplatedPAComponentUpdateParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/TemplatedPAComponentUpdateParametersRoot.md)
 - [Model.UnlinkedPATemplate](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplate.md)
 - [Model.UnlinkedPATemplateCategoryAndType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateCategoryAndType.md)
 - [Model.UnlinkedPATemplateCategoryAndTypeDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateCategoryAndTypeDetails.md)
 - [Model.UnlinkedPATemplateCategoryAndTypeDetailsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateCategoryAndTypeDetailsRoot.md)
 - [Model.UnlinkedPATemplateCategoryAndTypeRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateCategoryAndTypeRoot.md)
 - [Model.UnlinkedPATemplateColumnDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateColumnDetails.md)
 - [Model.UnlinkedPATemplateGroupDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateGroupDetails.md)
 - [Model.UnlinkedPATemplateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateParameters.md)
 - [Model.UnlinkedPATemplateParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateParametersRoot.md)
 - [Model.UnlinkedPATemplatePostSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatePostSummary.md)
 - [Model.UnlinkedPATemplatePostSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplatePostSummaryRoot.md)
 - [Model.UnlinkedPATemplateRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateRoot.md)
 - [Model.UnlinkedPATemplateSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateSummary.md)
 - [Model.UnlinkedPATemplateSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateSummaryRoot.md)
 - [Model.UnlinkedPATemplateUpdateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateUpdateParameters.md)
 - [Model.UnlinkedPATemplateUpdateParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/PAEngine/v3/docs/UnlinkedPATemplateUpdateParametersRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
